--- a/client/src/App.css
+++ b/client/src/App.css
@@ -90,3 +90,21 @@ button:hover {
   text-align: left;
   padding: 1em;
 }
+
+hr {
+  color: var(--white);
+  width: 90%;
+}
+
+#transport {
+  display: block;
+  z-index: 1;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
+
+Waveform {
+  z-index:10;
+}
