cleaning up bsic stylings

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -109,3 +109,18 @@ hr {
 Waveform {
   z-index: 1;
 }
+
+ul {
+  list-style: none;
+}
+
+a {
+  color: white;
+}
+a:visited {
+  color: white;
+}
+
+header {
+  font-size: 2em;
+}
