remove old buttong css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,25 +8,14 @@
 
 body {
   /* background: rgb(34, 33, 34); */
-  background: #270206;
+  background: #000821;
+  background-image: url("https://www.transparenttextures.com/patterns/otis-redding.png");
   color: white;
 }
 
 .App {
   font-family: sans-serif;
   text-align: center;
-}
-
-button {
-  background: white;
-  color: black;
-  border: none;
-  width: 60px;
-  height: 60px;
-  border-radius: 100%;
-  outline: none;
-  text-transform: uppercase;
-  transition: all 0.2s ease;
 }
 
 .mute {
@@ -60,10 +49,6 @@ button {
 }
 
 .unsolo:hover {
-  background: var(--white);
-}
-
-button:hover {
   background: var(--white);
 }
 
