--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@
 
 body {
   /* background: rgb(34, 33, 34); */
-  background: #270206;
+  background: #1a1a1a;
   color: white;
 }
 
@@ -94,16 +94,17 @@ button:hover {
 
 hr {
   color: var(--white);
+  opacity: 30%;
   width: 90%;
 }
 
 #transport {
   /* display: flex; */
-  z-index: 10;
+  /* z-index: 10;
   position: fixed;
   right: 20px;
   top: 80px;
-  color: black;
+  color: black; */
 }
 
 Waveform {
@@ -123,4 +124,8 @@ a:visited {
 
 header {
   font-size: 2em;
+}
+
+.main-window {
+  padding-bottom: 10vh;
 }
