pruned all irrelavent styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,7 +9,7 @@
 body {
   /* background: rgb(34, 33, 34); */
   background: #000821;
-  /* background-image: url("https://www.transparenttextures.com/patterns/otis-redding.png"); */
+  background-image: url("https://www.transparenttextures.com/patterns/otis-redding.png");
   color: white;
 }
 
