add phoenix armistice seeds, change project save and delete icons to quad-color blue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,7 @@
   --primary-color: rgb(245, 103, 93);
   --secondary-color: #ffff5e;
   --tertiary-color: rgb(80, 32, 28);
-  --red: rgb(57, 255, 186);
+  --quad-color: rgb(57, 255, 186);
   
 }
 
