--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
+
 :root {
   --black: #1a1a1a;
   --white: rgb(244, 240, 234);
@@ -5,7 +7,7 @@
   --secondary-color: #ffff5e;
   --tertiary-color: rgb(80, 32, 28);
   --red: rgb(57, 255, 186);
-  
+
 }
 
 body {
@@ -17,10 +19,10 @@ body {
   color: white;
 }
 
-.App {
-  font-family: sans-serif;
+/* .App {
+  font-family: 'Noto Sans', sans-serif;
   text-align: center;
-}
+} */
 
 .mute {
   background: rgb(245, 103, 93);
