Add font to main css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,10 +19,10 @@ body {
   color: white;
 }
 
-/* .App {
+.App {
   font-family: 'Noto Sans', sans-serif;
   text-align: center;
-} */
+}
 
 .mute {
   background: rgb(245, 103, 93);
